--- a/partials/footer.html
+++ b/partials/footer.html
@@ -3,3 +3,13 @@
     <small>&copy; <span id="year"></span> Maskun Kauppakeskus</small>
   </div>
 </footer>
+  <script src="../js/core/pjax.js"></script>
+  <script src="../js/ui/hamburger.js"></script>
+  <script src="../js/ui/hamburger-outside-close.js"></script>
+  <script src="../js/ui/header-hide-on-scroll.js"></script>
+  <script src="../js/effects/background.js"></script>
+  <script src="../js/ui/lock-bg-scale-fallback.js"></script>
+  <script src="../js/widgets/banner-carousel.js"></script>
+  <script src="../js/widgets/opening-hours.js"></script>
+  <script src="../js/widgets/back-to-top.js"></script>
+  <script src="../js/widgets/about-lightbox.js"></script>
