--- a/partials/header.html
+++ b/partials/header.html
@@ -36,7 +36,7 @@
 
         <li role="none"><a role="menuitem" href="./#tenants">Liikkeet &amp; palvelut</a></li>
         <li role="none"><a role="menuitem" href="./#location">Pysäköinti &amp; saapuminen</a></li>
-        <li role="none"><a role="menuitem" href="./info-yhteystiedot.html">Yhteystiedot</a></li>
+        <li role="none"><a role="menuitem" href="./yhteystiedot.html">Yhteystiedot</a></li>
         <li role="none"><a role="menuitem" href="./info-liiketilavuokraus.html">Liiketilavuokraus</a></li>
         <!-- NAV:END -->
       </ul>
